--- a/index.html
+++ b/index.html
@@ -54,11 +54,17 @@
             background-color: #f1f5f9;
         }
         .lang-hidden { display: none; }
-        /* Logo size settings */
+        /* Increased Logo size settings */
         .logo-container img {
-            height: 60px;
+            height: 90px;
             width: auto;
             display: block;
+            transition: height 0.3s ease;
+        }
+        @media (max-width: 768px) {
+            .logo-container img {
+                height: 70px;
+            }
         }
     </style>
 </head>
@@ -66,7 +72,7 @@
 
     <!-- Navigation -->
     <nav class="fixed w-full z-50 nav-glass">
-        <div class="max-w-7xl mx-auto px-6 h-24 flex items-center justify-between">
+        <div class="max-w-7xl mx-auto px-6 h-28 flex items-center justify-between">
             <div class="logo-container">
                 <a href="#">
                     <img src="logo-2.png" alt="Accutrust Logo" onerror="this.style.display='none'; this.parentElement.innerHTML='<span class=\'font-bold text-2xl text-brand-blue\'>ACCUTRUST</span>';">
@@ -146,7 +152,7 @@
                 </div>
             </div>
             <div>
-                <img src="team.png" alt="Accutrust Team" class="rounded-2xl shadow-2xl w-full h-auto object-cover" onerror="this.src='https://via.placeholder.com/800x600?text=Accutrust+Team';">
+                <img src="team.png" alt="Accutrust Team" class="rounded-2xl shadow-2xl w-full h-auto object-cover" onerror="this.src='https://images.unsplash.com/photo-1522071820081-009f0129c71c?auto=format&fit=crop&q=80&w=800';">
             </div>
         </div>
     </section>
@@ -168,7 +174,7 @@
             <div class="grid md:grid-cols-2 lg:grid-cols-4 gap-8">
                 <!-- Service 1: Taxation -->
                 <div class="service-card bg-white rounded-xl shadow-sm border border-slate-100 h-full">
-                    <img src="compass-taxation.png" alt="Taxation" class="service-image" onerror="this.src='https://via.placeholder.com/400x300?text=Taxation';">
+                    <img src="compass-taxation.png" alt="Taxation" class="service-image" onerror="this.src='https://images.unsplash.com/photo-1554224155-6726b3ff858f?auto=format&fit=crop&q=80&w=600';">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-3 text-brand-blue">
                             <span class="el-text">Φορολογία</span>
@@ -183,7 +189,7 @@
 
                 <!-- Service 2: Transfer Pricing -->
                 <div class="service-card bg-white rounded-xl shadow-sm border border-slate-100 h-full">
-                    <img src="oecd.png" alt="Transfer Pricing" class="service-image" onerror="this.src='https://via.placeholder.com/400x300?text=Transfer+Pricing';">
+                    <img src="oecd.png" alt="Transfer Pricing" class="service-image" onerror="this.src='https://images.unsplash.com/photo-1454165833767-027ffea9e7a7?auto=format&fit=crop&q=80&w=600';">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-3 text-brand-blue">
                             <span class="el-text">Transfer Pricing</span>
@@ -198,9 +204,7 @@
 
                 <!-- Service 3: Advisory -->
                 <div class="service-card bg-white rounded-xl shadow-sm border border-slate-100 h-full">
-                    <div class="service-image flex items-center justify-center bg-slate-100 text-slate-400">
-                        <svg class="w-16 h-16" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M9 12l2 2 4-4m5.618-4.016A11.955 11.955 0 0112 2.944a11.955 11.955 0 01-8.618 3.04A12.02 12.02 0 003 9c0 5.591 3.824 10.29 9 11.622 5.176-1.332 9-6.03 9-11.622 0-1.042-.133-2.052-.382-3.016z"></path></svg>
-                    </div>
+                    <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?auto=format&fit=crop&q=80&w=600" alt="Advisory" class="service-image">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-3 text-brand-blue">
                             <span class="el-text">Συμβουλευτικές</span>
@@ -215,9 +219,7 @@
 
                 <!-- Service 4: Accounting -->
                 <div class="service-card bg-white rounded-xl shadow-sm border border-slate-100 h-full">
-                    <div class="service-image flex items-center justify-center bg-slate-100 text-slate-400">
-                        <svg class="w-16 h-16" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="1" d="M9 19v-6a2 2 0 00-2-2H5a2 2 0 00-2 2v6a2 2 0 002 2h2a2 2 0 002-2zm0 0V9a2 2 0 012-2h2a2 2 0 012 2v10m-6 0a2 2 0 002 2h2a2 2 0 002-2m0 0V5a2 2 0 012-2h2a2 2 0 012 2v14a2 2 0 01-2 2h-2a2 2 0 01-2-2z"></path></svg>
-                    </div>
+                    <img src="https://images.unsplash.com/photo-1460925895917-afdab827c52f?auto=format&fit=crop&q=80&w=600" alt="Accounting" class="service-image">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-3 text-brand-blue">
                             <span class="el-text">Λογιστική</span>
