--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
             background-color: #f1f5f9;
         }
         .lang-hidden { display: none; }
-        /* Increased Logo size settings */
+        /* Doubled Logo size settings (from 90px to 180px) */
         .logo-container img {
-            height: 90px;
+            height: 180px;
             width: auto;
             display: block;
             transition: height 0.3s ease;
         }
         @media (max-width: 768px) {
             .logo-container img {
-                height: 70px;
+                height: 120px;
             }
         }
     </style>
@@ -72,10 +72,10 @@
 
     <!-- Navigation -->
     <nav class="fixed w-full z-50 nav-glass">
-        <div class="max-w-7xl mx-auto px-6 h-28 flex items-center justify-between">
+        <div class="max-w-7xl mx-auto px-6 h-36 flex items-center justify-between">
             <div class="logo-container">
                 <a href="#">
-                    <img src="logo-2.png" alt="Accutrust Logo" onerror="this.style.display='none'; this.parentElement.innerHTML='<span class=\'font-bold text-2xl text-brand-blue\'>ACCUTRUST</span>';">
+                    <img src="logo-2.png" alt="Accutrust Logo" onerror="this.style.display='none'; this.parentElement.innerHTML='<span class=\'font-bold text-3xl text-brand-blue\'>ACCUTRUST</span>';">
                 </a>
             </div>
             
@@ -98,7 +98,7 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="pt-48 pb-24 md:pt-64 md:pb-40 hero-section px-6">
+    <header class="pt-56 pb-24 md:pt-72 md:pb-40 hero-section px-6">
         <div class="max-w-7xl mx-auto flex flex-col items-center text-center">
             <div class="el-text">
                 <span class="inline-block px-4 py-1 rounded-full bg-white/80 border border-slate-200 text-brand-blue text-xs font-bold tracking-widest uppercase mb-6">Boutique Consulting Firm | Athens</span>
@@ -204,7 +204,7 @@
 
                 <!-- Service 3: Advisory -->
                 <div class="service-card bg-white rounded-xl shadow-sm border border-slate-100 h-full">
-                    <img src="https://images.unsplash.com/photo-1557804506-669a67965ba0?auto=format&fit=crop&q=80&w=600" alt="Advisory" class="service-image">
+                    <img src="team.png" alt="Advisory" class="service-image" onerror="this.src='https://images.unsplash.com/photo-1557804506-669a67965ba0?auto=format&fit=crop&q=80&w=600';">
                     <div class="p-6">
                         <h3 class="font-bold text-xl mb-3 text-brand-blue">
                             <span class="el-text">Συμβουλευτικές</span>
