--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
             background-color: #f1f5f9;
         }
         .lang-hidden { display: none; }
-        /* Doubled Logo size settings (from 90px to 180px) */
+        /* Reduced Logo size by 30% (from 180px to 126px) */
         .logo-container img {
-            height: 180px;
+            height: 126px;
             width: auto;
             display: block;
             transition: height 0.3s ease;
         }
         @media (max-width: 768px) {
             .logo-container img {
-                height: 120px;
+                height: 84px; /* Proportional reduction for mobile */
             }
         }
     </style>
@@ -72,7 +72,8 @@
 
     <!-- Navigation -->
     <nav class="fixed w-full z-50 nav-glass">
-        <div class="max-w-7xl mx-auto px-6 h-36 flex items-center justify-between">
+        <!-- Reduced navbar height from h-36 to h-32 to match the new logo size -->
+        <div class="max-w-7xl mx-auto px-6 h-32 flex items-center justify-between">
             <div class="logo-container">
                 <a href="#">
                     <img src="logo-2.png" alt="Accutrust Logo" onerror="this.style.display='none'; this.parentElement.innerHTML='<span class=\'font-bold text-3xl text-brand-blue\'>ACCUTRUST</span>';">
