Adjust logo size and navbar height in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
             background-color: #f1f5f9;
         }
         .lang-hidden { display: none; }
-        /* Reduced Logo size by 30% (from 180px to 126px) */
+        
+        /* Logo size settings - Adjusted to 126px as requested */
         .logo-container img {
             height: 126px;
             width: auto;
@@ -63,7 +64,7 @@
         }
         @media (max-width: 768px) {
             .logo-container img {
-                height: 84px; /* Proportional reduction for mobile */
+                height: 80px;
             }
         }
     </style>
@@ -72,8 +73,8 @@
 
     <!-- Navigation -->
     <nav class="fixed w-full z-50 nav-glass">
-        <!-- Reduced navbar height from h-36 to h-32 to match the new logo size -->
-        <div class="max-w-7xl mx-auto px-6 h-32 flex items-center justify-between">
+        <!-- Navbar height adjusted to h-36 for the 126px logo -->
+        <div class="max-w-7xl mx-auto px-6 h-36 flex items-center justify-between">
             <div class="logo-container">
                 <a href="#">
                     <img src="logo-2.png" alt="Accutrust Logo" onerror="this.style.display='none'; this.parentElement.innerHTML='<span class=\'font-bold text-3xl text-brand-blue\'>ACCUTRUST</span>';">
@@ -99,9 +100,10 @@
     </nav>
 
     <!-- Hero Section -->
-    <header class="pt-56 pb-24 md:pt-72 md:pb-40 hero-section px-6">
+    <header class="pt-56 pb-24 md:pt-64 md:pb-40 hero-section px-6">
         <div class="max-w-7xl mx-auto flex flex-col items-center text-center">
             <div class="el-text">
+                <h2 class="text-brand-blue font-bold text-4xl md:text-5xl mb-4 tracking-tight">Accutrust Consulting</h2>
                 <span class="inline-block px-4 py-1 rounded-full bg-white/80 border border-slate-200 text-brand-blue text-xs font-bold tracking-widest uppercase mb-6">Boutique Consulting Firm | Athens</span>
                 <h1 class="text-4xl md:text-7xl font-bold mb-8 text-brand-blue leading-tight">
                     Στρατηγική Ακρίβεια & <br><span class="text-brand-gold">Ουσιαστικές Λύσεις</span>
@@ -113,6 +115,7 @@
             </div>
 
             <div class="en-text lang-hidden">
+                <h2 class="text-brand-blue font-bold text-4xl md:text-5xl mb-4 tracking-tight">Accutrust Consulting</h2>
                 <span class="inline-block px-4 py-1 rounded-full bg-white/80 border border-slate-200 text-brand-blue text-xs font-bold tracking-widest uppercase mb-6">Boutique Consulting Firm | Athens</span>
                 <h1 class="text-4xl md:text-7xl font-bold mb-8 text-brand-blue leading-tight">
                     Strategic Precision & <br><span class="text-brand-gold">Actionable Solutions</span>
